Fixing filter button layout breaking in Chrome

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -694,6 +694,14 @@ a.filter-button {
 	text-align: center;
 }
 
+#filter-buttons-right {
+	width: 306px;
+}
+
+#filter-buttons-left {
+	width: 204px;
+}
+
 .user-button-wrap {
 	margin: 0 auto 15px auto;
 	text-align: center;
